# forgedandfound

./: .dockerignore  .gitignore  .infisical.json  .vercelignore  AUTH.ai.md  CLAUDE.md  README.auth.md  Taskfile.yaml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  route53-zone-backup.json  tsconfig.base.json  turbo.json
.aiassistant/rules/: graphql.md
.claude/: launch.json
.github/workflows/: branch-guard.yaml  ci.yml  deploy.yaml  infra.yaml  main.yaml  platform.yaml  pr-cleanup.yaml  pr-preview.yaml  preview.yaml  production.yaml  staging.yaml
.http/: admin.schema.graphql  auth.js
_.github/workflows/: deploy.yml
apps/shopify/: .gitignore  Taskfile.yaml  Taskfile.yml  package.json  (+4 more)
http/: customer.http  http-client.env.json  package.json
infra/: Taskfile.yaml  auth-app.tf  auth.tf  dns.tf  main.tf  secret-data.tf  shopify-events.tf  sms.tf
platform/: .env.sample  .gitignore  README.md  Taskfile.yaml  graphql.config.yml
root-ws-symlinks/: .infisical.json  README.md
scripts/: Taskfile.yaml  apple-sign-jwt.ts  code_flow.ts  env.ts  package.json  tsconfig.json  wt-symlinks.sh
scripts/scraper/: .gitignore  CATEGORISATION.md  INSTRUCTION.md  README.md  pyproject.toml  sites.toml  taxonomy.json
scripts/scraper/src/scraper/: classify.py  config.py  dispatch.py  main.py  product.py  quality.py  taxonomy.py  web.py
services/: Taskfile.yaml
terraform/: .gitignore  .terraform.lock.hcl  NOTES.auth.md  README.md  Taskfile.yaml  account-service.tf  api.tf  auth.tf  email.tf  main.tf  networking.tf  shopify-events.tf  user-service.tf
(+436 files in other folders)
