[project]
name = "scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "Jalal Hosseini",email = "jhosseini.dev@gmail.com"}
]
readme = "README.md"
requires-python =">=3.12,<4.0"
dependencies = [
    "scrapegraphai (>=2.1.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "scraper", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
