[project]
name = "scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "Jalal Hosseini",email = "jhosseini.dev@gmail.com"}
]
readme = "README.md"
requires-python =">=3.12,<4.0"
dependencies = [
    "requests (>=2.32.0,<3.0.0)",
    "beautifulsoup4 (>=4.12.0,<5.0.0)",
    "lxml (>=5.2.0,<6.0.0)"
]

[project.scripts]
scraper = "scraper.main:main"

[tool.poetry]
packages = [{include = "scraper", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

